# celery-poc

./: README.md
app/: docker-compose.yml  pyproject.toml
app/app/: Dockerfile  main.py  requirements.txt  worker.py
kubernetes/: kind-config.yaml  setup.sh
kubernetes/helm/: app-values.yaml  values-argo.yaml  values.yaml
