[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Louis Dutoit <louis.dutoitld@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
celery = {extras = ["redis"], version = "^5.4.0"}
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
